--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.17.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "node-json-db": "^2.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
